--- a/src/App.scss
+++ b/src/App.scss
@@ -106,6 +106,19 @@ h3 {
 		border-right : 1px solid rgba(255, 255, 255, 0.4);
 	}
 }
+.spin {
+	animation: spin infinite 5s linear;
+	width: 80px;
+	height: 80px;
+}
+@keyframes spin {
+	from {
+	  transform: rotate(0deg);
+	}
+	to {
+	  transform: rotate(360deg);
+	}
+}
 @media (max-width: 767px) {
 	body {
 		margin : 30px;
